--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,31 @@
 .video-wrap {
     position: relative;
 }
+
 .play-btn {
     z-index: 999;
     position: absolute;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+}
+
+.play-btn .pbtn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    width: 100px;
+    height: 50px;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 800;
+    transition: opacity .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.pbtn-active {
+    opacity: 0;
+    transition: opacity .5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
