--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
+/* 登入视频区 start */
+
 .video-wrap {
-    position: relative;
+    position: absolute;
 }
 
 .play-btn {
@@ -29,3 +31,68 @@
     opacity: 0;
     transition: opacity .5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+
+/* 登入视频区 end */
+
+/* 主页面布局 start */
+
+.main-container {
+    min-width: 1000px;
+}
+
+/* 主页面布局 end */
+
+/* 头部导航布局 start */
+
+.header {
+    width: 100%;
+    height: 90px;
+    background-color: #22262a;
+}
+
+.header-upper,
+.nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-upper {
+    height: 55px;
+    border-bottom: 1px solid #393939;
+}
+
+.logo {
+    height: 100%;
+}
+
+.nav {
+    height: 34px;
+}
+
+.nav a {
+    color: #ccc;
+    font-size: 14px;
+    font-weight: 800;
+    margin: 0 20px;
+    text-transform: uppercase;
+}
+
+.nav a:hover {
+    color: #fff;
+    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+/* 头部导航布局 end */
+
+/* 底部布局 start*/
+
+.footer {
+    height: 50px;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    line-height: 50px;
+}
+
+/* 底部布局 end */
