--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,12 @@
+body {
+    position: relative;
+}
+
 /* 登入视频区 start */
 
-.video-wrap {
-    position: absolute;
+.video-container {
+    z-index: 10;
+    position: fixed;
 }
 
 .play-btn {
@@ -45,6 +50,9 @@
 /* 头部导航布局 start */
 
 .header {
+    z-index: 2;
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 90px;
     background-color: #22262a;
@@ -84,6 +92,14 @@
 }
 
 /* 头部导航布局 end */
+
+/* 内容区布局 start */
+
+.mian-wrap {
+    margin-top: 90px;
+}
+
+/* 内容区布局 end */
 
 /* 底部布局 start*/
 
