--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,22 @@ body {
 
 /* 头部导航布局 start */
 
+.header-active {
+    opacity: .5;
+    height: 70px !important;
+    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1)
+}
+
+.header-active .header-upper {
+    height: 29px;
+    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1)
+}
+
+.header-active .nav {
+    height: 40px;
+    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1)
+}
+
 .header {
     z-index: 2;
     position: fixed;
@@ -56,6 +72,7 @@ body {
     width: 100%;
     height: 90px;
     background-color: #22262a;
+    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1)
 }
 
 .header-upper,
