--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 body {
     position: relative;
+    background-color: #F2F2F2;
 }
 
 /* 登入视频区 start */
@@ -49,20 +50,9 @@ body {
 
 /* 头部导航布局 start */
 
-.header-active {
-    opacity: .5;
-    height: 70px !important;
-    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1)
-}
-
-.header-active .header-upper {
-    height: 29px;
-    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1)
-}
-
 .header-active .nav {
-    height: 40px;
-    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1)
+    height: 70px;
+    transition: height .2s linear;
 }
 
 .header {
@@ -71,6 +61,7 @@ body {
     top: 0;
     width: 100%;
     height: 90px;
+    overflow: hidden;
     background-color: #22262a;
     transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1)
 }
@@ -93,11 +84,13 @@ body {
 
 .nav {
     height: 34px;
+    transition: all .2s ease;
+    overflow: hidden;
 }
 
 .nav a {
     color: #ccc;
-    font-size: 14px;
+    font-size: 17px;
     font-weight: 800;
     margin: 0 20px;
     text-transform: uppercase;
@@ -108,12 +101,212 @@ body {
     transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
+.header-active {
+    height: 70px;
+    transition: height .2s linear;
+    color: #fff;
+}
+
+.header-active .header-upper {
+    display: none;
+    height: 29px;
+    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1)
+}
+
+.header-active .nav a {
+    color: #fff;
+    text-shadow: 1px 1px 5px #888;
+}
+
 /* 头部导航布局 end */
 
 /* 内容区布局 start */
 
+.banner {
+    position: relative;
+    margin-top: 80px;
+    width: 100%;
+    height: 500px;
+    box-shadow: 1px 1px 5px #444;
+    background-image: url("../images/bg_index@2x.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    /* background-attachment: fixed; */
+}
+
+.banner-title {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 200px;
+    color: #fff;
+    text-align: center;
+}
+
+.banner-title span:first-child {
+    font-size: 50px;
+    text-transform: uppercase;
+}
+
+.banner-title span:last-child {
+    font-size: 16px;
+    margin-top: 20px;
+}
+
+.overlay {
+    background: url("../images/overlay-pattern.png")top left rgba(0, 0, 0, .25);
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
+.bg-wrap {
+    padding: 20px 0 40px 0;
+    background-image: url("../images/bg-yellow.jpg");
+    overflow: hidden;
+    color: #fff;
+}
+
 .mian-wrap {
-    margin-top: 90px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.title {
+    position: relative;
+    margin: 40px 0;
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.title:before,
+.title:after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 20px;
+    height: 2px;
+    transform: rotate(-45deg) skewX(45deg);
+    background-color: #c6a972;
+}
+
+.title:before {
+    left: 53px;
+    top: -3px;
+    transform-origin: left bottom;
+}
+
+.title:after {
+    left: -6px;
+    /* top: calc(100%+3px); */
+    transform-origin: right top;
+}
+
+.sub-title {
+    color: #FFD500;
+    text-transform: uppercase;
+}
+
+.mian-wrap .content {
+    padding-bottom: 40px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.mian-wrap .content:first-child {
+    width: 100%;
+    height: 100%;
+    background-image: url("../images/bg-yellow.jpg")
+}
+
+.about-item-wrap {
+    display: flex;
+    margin-top: 30px;
+}
+
+.about-item {
+    flex: 1;
+}
+
+.about-icon-wrap {
+    display: flex;
+    margin: 0 auto 10px;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background-color: #FFD500;
+    transition: all .2s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.about-icon-inner {
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    border: 2px solid #000;
+    border-radius: 50%;
+    background-color: #FFD500;
+}
+
+.about-icon-inner i {
+    color: #1B1B1B;
+    font-size: 50px;
+}
+
+.about-icon-wrap:hover {
+    background-color: #B39500;
+    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.more {
+    position: relative;
+    box-sizing: border-box;
+    padding: 5px 20px;
+    width: 100px;
+    text-align: center;
+    background-color: #FFD500;
+    border: 2px solid #FFD500;
+    cursor: pointer;
+    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+    line-height: 20px;
+}
+
+.more:after {
+    position: absolute;
+    left: 100px;
+    top: 50%;
+    content: "";
+    display: inline-block;
+    width: 1100px;
+    height: 2px;
+    background: #FFD500;
+    border-radius: 50%;
+}
+
+.more a {
+    color: #000;
+}
+
+.more:active,
+.more:hover {
+    border: 2px solid #FFD500;
+    background-color: #B39500;
+    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 /* 内容区布局 end */
