--- a/css/index.css
+++ b/css/index.css
@@ -364,7 +364,18 @@ body {
     line-height: 35px;
     border: 2px solid #F2F2F2;
 }
-
+.maker-list {
+    margin: 0 auto;
+    width: 600px;
+    display: flex;
+    justify-content: space-around;
+}
+.maker-list-item {
+    width: 150px;
+}
+.maker-list-item img {
+    width: 100%;
+}
 .more {
     position: relative;
     box-sizing: border-box;
@@ -415,3 +426,12 @@ body {
 }
 
 /* 底部布局 end */
+
+.re-list {
+    padding: 20px;
+    background-color:rgba(255,255,255,.2);
+    text-align: left;
+}
+.re-list-item {
+    margin: 10px;
+}
